--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -35,10 +35,10 @@ body {
 }
 .display-4 {
   font-family: 'Rubik', sans-serif;
-  font-size: 1rem;
+  font-size: 1.35rem;
 }
 .display-4 > .mbr-iconfont {
-  font-size: 1.6rem;
+  font-size: 2.16rem;
 }
 .display-5 {
   font-family: 'Rubik', sans-serif;
@@ -71,9 +71,9 @@ body {
     line-height: calc( 1.4 * (1.42rem + (2.2 - 1.42) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-4 {
-    font-size: 0.8rem;
-    font-size: calc( 1rem + (1 - 1) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.4 * (1rem + (1 - 1) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 1.08rem;
+    font-size: calc( 1.1225rem + (1.35 - 1.1225) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.4 * (1.1225rem + (1.35 - 1.1225) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-5 {
     font-size: 1.2rem;
@@ -1905,7 +1905,7 @@ body {
   width: 58px;
   height: 58px;
   font-size: 29px;
-  border: 2px solid #efefef;
+  border: 2px solid #cccccc;
   border-radius: 50%;
 }
 @media (max-width: 991px) {
@@ -2025,7 +2025,7 @@ body {
   height: 64px;
   font-size: 32px;
   border-radius: 50%;
-  border: 2px solid #efefef;
+  border: 2px solid #cccccc;
 }
 @media (max-width: 767px) {
   .cid-rrAnHaVyuS .step {
@@ -2044,7 +2044,7 @@ body {
   content: "";
   width: 2px;
   height: calc(100% - (32px + 4px) * 2);
-  background-color: #efefef;
+  background-color: #cccccc;
 }
 @media (max-width: 767px) {
   .cid-rrAnHaVyuS .separline:after {
@@ -2607,6 +2607,9 @@ body {
 .cid-rrGKOlI1e7 .card .card-header a.panel-title h4 .sign {
   padding-right: 1rem;
 }
+.cid-rrGKOlI1e7 H4 {
+  text-align: left;
+}
 .cid-rrGL0Oepst {
   padding-top: 90px;
   padding-bottom: 60px;
@@ -3154,430 +3157,4 @@ body {
   .cid-rrQ8Wtkmy3 .container > .row > .col-md-6:last-child {
     padding-left: 30px;
   }
-}
-.cid-rrtUghjvwb .navbar {
-  background: #ffffff;
-  transition: none;
-  min-height: 77px;
-  padding: .5rem 0;
-}
-.cid-rrtUghjvwb .navbar-dropdown.bg-color.transparent.opened {
-  background: #ffffff;
-}
-.cid-rrtUghjvwb a {
-  font-style: normal;
-}
-.cid-rrtUghjvwb .nav-item span {
-  padding-right: 0.4em;
-  line-height: 0.5em;
-  vertical-align: text-bottom;
-  position: relative;
-  text-decoration: none;
-}
-.cid-rrtUghjvwb .nav-item a {
-  display: -webkit-flex;
-  align-items: center;
-  justify-content: center;
-  padding: 0.7rem 0 !important;
-  margin: 0rem .65rem !important;
-  -webkit-align-items: center;
-  -webkit-justify-content: center;
-}
-.cid-rrtUghjvwb .nav-item:focus,
-.cid-rrtUghjvwb .nav-link:focus {
-  outline: none;
-}
-.cid-rrtUghjvwb .btn {
-  padding: 0.4rem 1.5rem;
-  display: -webkit-inline-flex;
-  align-items: center;
-  -webkit-align-items: center;
-}
-.cid-rrtUghjvwb .btn .mbr-iconfont {
-  font-size: 1.6rem;
-}
-.cid-rrtUghjvwb .menu-logo {
-  margin-right: auto;
-}
-.cid-rrtUghjvwb .menu-logo .navbar-brand {
-  display: flex;
-  margin-left: 5rem;
-  padding: 0;
-  transition: padding .2s;
-  min-height: 3.8rem;
-  -webkit-align-items: center;
-  align-items: center;
-}
-.cid-rrtUghjvwb .menu-logo .navbar-brand .navbar-caption-wrap {
-  display: flex;
-  -webkit-align-items: center;
-  align-items: center;
-  word-break: break-word;
-  min-width: 7rem;
-  margin: .3rem 0;
-}
-.cid-rrtUghjvwb .menu-logo .navbar-brand .navbar-caption-wrap .navbar-caption {
-  line-height: 1.2rem !important;
-  padding-right: 2rem;
-}
-.cid-rrtUghjvwb .menu-logo .navbar-brand .navbar-logo {
-  font-size: 4rem;
-  transition: font-size 0.25s;
-}
-.cid-rrtUghjvwb .menu-logo .navbar-brand .navbar-logo img {
-  display: flex;
-}
-.cid-rrtUghjvwb .menu-logo .navbar-brand .navbar-logo .mbr-iconfont {
-  transition: font-size 0.25s;
-}
-.cid-rrtUghjvwb .menu-logo .navbar-brand .navbar-logo a {
-  display: inline-flex;
-}
-.cid-rrtUghjvwb .navbar-toggleable-sm .navbar-collapse {
-  justify-content: flex-end;
-  -webkit-justify-content: flex-end;
-  padding-right: 5rem;
-  width: auto;
-}
-.cid-rrtUghjvwb .navbar-toggleable-sm .navbar-collapse .navbar-nav {
-  flex-wrap: wrap;
-  -webkit-flex-wrap: wrap;
-  padding-left: 0;
-}
-.cid-rrtUghjvwb .navbar-toggleable-sm .navbar-collapse .navbar-nav .nav-item {
-  -webkit-align-self: center;
-  align-self: center;
-}
-.cid-rrtUghjvwb .navbar-toggleable-sm .navbar-collapse .navbar-buttons {
-  padding-left: 0;
-  padding-bottom: 0;
-}
-.cid-rrtUghjvwb .dropdown .dropdown-menu {
-  background: #ffffff;
-  display: none;
-  position: absolute;
-  min-width: 5rem;
-  padding-top: 1.4rem;
-  padding-bottom: 1.4rem;
-  text-align: left;
-}
-.cid-rrtUghjvwb .dropdown .dropdown-menu .dropdown-item {
-  width: auto;
-  padding: 0.235em 1.5385em 0.235em 1.5385em !important;
-}
-.cid-rrtUghjvwb .dropdown .dropdown-menu .dropdown-item::after {
-  right: 0.5rem;
-}
-.cid-rrtUghjvwb .dropdown .dropdown-menu .dropdown-submenu {
-  margin: 0;
-}
-.cid-rrtUghjvwb .dropdown.open > .dropdown-menu {
-  display: block;
-}
-.cid-rrtUghjvwb .navbar-toggleable-sm.opened:after {
-  position: absolute;
-  width: 100vw;
-  height: 100vh;
-  content: '';
-  background-color: rgba(0, 0, 0, 0.1);
-  left: 0;
-  bottom: 0;
-  transform: translateY(100%);
-  -webkit-transform: translateY(100%);
-  z-index: 1000;
-}
-.cid-rrtUghjvwb .navbar.navbar-short {
-  min-height: 60px;
-  transition: all .2s;
-}
-.cid-rrtUghjvwb .navbar.navbar-short .navbar-toggler-right {
-  top: 20px;
-}
-.cid-rrtUghjvwb .navbar.navbar-short .navbar-logo a {
-  font-size: 2.5rem !important;
-  line-height: 2.5rem;
-  transition: font-size 0.25s;
-}
-.cid-rrtUghjvwb .navbar.navbar-short .navbar-logo a .mbr-iconfont {
-  font-size: 2.5rem !important;
-}
-.cid-rrtUghjvwb .navbar.navbar-short .navbar-logo a img {
-  height: 3rem !important;
-}
-.cid-rrtUghjvwb .navbar.navbar-short .navbar-brand {
-  min-height: 3rem;
-}
-.cid-rrtUghjvwb button.navbar-toggler {
-  width: 31px;
-  height: 18px;
-  cursor: pointer;
-  transition: all .2s;
-  top: 1.5rem;
-  right: 1rem;
-}
-.cid-rrtUghjvwb button.navbar-toggler:focus {
-  outline: none;
-}
-.cid-rrtUghjvwb button.navbar-toggler .hamburger span {
-  position: absolute;
-  right: 0;
-  width: 30px;
-  height: 2px;
-  border-right: 5px;
-  background-color: #333333;
-}
-.cid-rrtUghjvwb button.navbar-toggler .hamburger span:nth-child(1) {
-  top: 0;
-  transition: all .2s;
-}
-.cid-rrtUghjvwb button.navbar-toggler .hamburger span:nth-child(2) {
-  top: 8px;
-  transition: all .15s;
-}
-.cid-rrtUghjvwb button.navbar-toggler .hamburger span:nth-child(3) {
-  top: 8px;
-  transition: all .15s;
-}
-.cid-rrtUghjvwb button.navbar-toggler .hamburger span:nth-child(4) {
-  top: 16px;
-  transition: all .2s;
-}
-.cid-rrtUghjvwb nav.opened .hamburger span:nth-child(1) {
-  top: 8px;
-  width: 0;
-  opacity: 0;
-  right: 50%;
-  transition: all .2s;
-}
-.cid-rrtUghjvwb nav.opened .hamburger span:nth-child(2) {
-  -webkit-transform: rotate(45deg);
-  transform: rotate(45deg);
-  transition: all .25s;
-}
-.cid-rrtUghjvwb nav.opened .hamburger span:nth-child(3) {
-  -webkit-transform: rotate(-45deg);
-  transform: rotate(-45deg);
-  transition: all .25s;
-}
-.cid-rrtUghjvwb nav.opened .hamburger span:nth-child(4) {
-  top: 8px;
-  width: 0;
-  opacity: 0;
-  right: 50%;
-  transition: all .2s;
-}
-.cid-rrtUghjvwb .collapsed.navbar-expand {
-  flex-direction: column;
-  -webkit-flex-direction: column;
-}
-.cid-rrtUghjvwb .collapsed .btn {
-  display: -webkit-flex;
-}
-.cid-rrtUghjvwb .collapsed .navbar-collapse {
-  display: none !important;
-  padding-right: 0 !important;
-}
-.cid-rrtUghjvwb .collapsed .navbar-collapse.collapsing,
-.cid-rrtUghjvwb .collapsed .navbar-collapse.show {
-  display: block !important;
-}
-.cid-rrtUghjvwb .collapsed .navbar-collapse.collapsing .navbar-nav,
-.cid-rrtUghjvwb .collapsed .navbar-collapse.show .navbar-nav {
-  display: block;
-  text-align: center;
-}
-.cid-rrtUghjvwb .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item,
-.cid-rrtUghjvwb .collapsed .navbar-collapse.show .navbar-nav .nav-item {
-  clear: both;
-}
-.cid-rrtUghjvwb .collapsed .navbar-collapse.collapsing .navbar-buttons,
-.cid-rrtUghjvwb .collapsed .navbar-collapse.show .navbar-buttons {
-  text-align: center;
-}
-.cid-rrtUghjvwb .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
-.cid-rrtUghjvwb .collapsed .navbar-collapse.show .navbar-buttons:last-child {
-  margin-bottom: 1rem;
-}
-@media (min-width: 992px) {
-  .cid-rrtUghjvwb .collapsed:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 4.9rem);
-  }
-}
-.cid-rrtUghjvwb .collapsed button.navbar-toggler {
-  display: block;
-}
-.cid-rrtUghjvwb .collapsed .navbar-brand {
-  margin-left: 1rem !important;
-}
-.cid-rrtUghjvwb .collapsed .navbar-toggleable-sm {
-  flex-direction: column;
-  -webkit-flex-direction: column;
-}
-.cid-rrtUghjvwb .collapsed .dropdown .dropdown-menu {
-  width: 100%;
-  text-align: center;
-  position: relative;
-  opacity: 0;
-  overflow: hidden;
-  display: block;
-  height: 0;
-  visibility: hidden;
-  padding: 0;
-  transition-duration: .5s;
-  transition-property: opacity,padding,height;
-}
-.cid-rrtUghjvwb .collapsed .dropdown.open > .dropdown-menu {
-  position: relative;
-  opacity: 1;
-  height: auto;
-  padding: 1.4rem 0;
-  visibility: visible;
-}
-.cid-rrtUghjvwb .collapsed .dropdown .dropdown-submenu {
-  left: 0;
-  text-align: center;
-  width: 100%;
-}
-.cid-rrtUghjvwb .collapsed .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
-  margin-top: 0;
-  position: inherit;
-  right: 0;
-  top: 50%;
-  display: inline-block;
-  width: 0;
-  height: 0;
-  margin-left: .3em;
-  vertical-align: middle;
-  content: "";
-  border-top: .30em solid;
-  border-right: .30em solid transparent;
-  border-left: .30em solid transparent;
-}
-@media (max-width: 991px) {
-  .cid-rrtUghjvwb.navbar-expand {
-    flex-direction: column;
-    -webkit-flex-direction: column;
-  }
-  .cid-rrtUghjvwb img {
-    height: 3.8rem !important;
-  }
-  .cid-rrtUghjvwb .btn {
-    display: -webkit-flex;
-  }
-  .cid-rrtUghjvwb button.navbar-toggler {
-    display: block;
-  }
-  .cid-rrtUghjvwb .navbar-brand {
-    margin-left: 1rem !important;
-  }
-  .cid-rrtUghjvwb .navbar-toggleable-sm {
-    flex-direction: column;
-    -webkit-flex-direction: column;
-  }
-  .cid-rrtUghjvwb .navbar-collapse {
-    display: none !important;
-    padding-right: 0 !important;
-  }
-  .cid-rrtUghjvwb .navbar-collapse.collapsing,
-  .cid-rrtUghjvwb .navbar-collapse.show {
-    display: block !important;
-  }
-  .cid-rrtUghjvwb .navbar-collapse.collapsing .navbar-nav,
-  .cid-rrtUghjvwb .navbar-collapse.show .navbar-nav {
-    display: block;
-    text-align: center;
-  }
-  .cid-rrtUghjvwb .navbar-collapse.collapsing .navbar-nav .nav-item,
-  .cid-rrtUghjvwb .navbar-collapse.show .navbar-nav .nav-item {
-    clear: both;
-  }
-  .cid-rrtUghjvwb .navbar-collapse.collapsing .navbar-buttons,
-  .cid-rrtUghjvwb .navbar-collapse.show .navbar-buttons {
-    text-align: center;
-  }
-  .cid-rrtUghjvwb .navbar-collapse.collapsing .navbar-buttons:last-child,
-  .cid-rrtUghjvwb .navbar-collapse.show .navbar-buttons:last-child {
-    margin-bottom: 1rem;
-  }
-  .cid-rrtUghjvwb .dropdown .dropdown-menu {
-    width: 100%;
-    text-align: center;
-    position: relative;
-    opacity: 0;
-    overflow: hidden;
-    display: block;
-    height: 0;
-    visibility: hidden;
-    padding: 0;
-    transition-duration: .5s;
-    transition-property: opacity,padding,height;
-  }
-  .cid-rrtUghjvwb .dropdown.open > .dropdown-menu {
-    position: relative;
-    opacity: 1;
-    height: auto;
-    padding: 1.4rem 0;
-    visibility: visible;
-  }
-  .cid-rrtUghjvwb .dropdown .dropdown-submenu {
-    left: 0;
-    text-align: center;
-    width: 100%;
-  }
-  .cid-rrtUghjvwb .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
-    margin-top: 0;
-    position: inherit;
-    right: 0;
-    top: 50%;
-    display: inline-block;
-    width: 0;
-    height: 0;
-    margin-left: .3em;
-    vertical-align: middle;
-    content: "";
-    border-top: .30em solid;
-    border-right: .30em solid transparent;
-    border-left: .30em solid transparent;
-  }
-}
-@media (min-width: 767px) {
-  .cid-rrtUghjvwb .menu-logo {
-    flex-shrink: 0;
-    -webkit-flex-shrink: 0;
-  }
-}
-.cid-rrtUghjvwb .navbar-collapse {
-  flex-basis: auto;
-  -webkit-flex-basis: auto;
-}
-.cid-rrtUghjvwb .nav-link:hover,
-.cid-rrtUghjvwb .dropdown-item:hover {
-  color: #767676 !important;
-}
-.cid-rrQaNeE89A {
-  background: #ffffff;
-  padding-top: 60px;
-  padding-bottom: 60px;
-}
-.cid-rrQaNeE89A .image-block {
-  margin: auto;
-}
-.cid-rrQaNeE89A .mbr-figure {
-  margin: 0 auto;
-}
-.cid-rrQaNeE89A figcaption {
-  position: relative;
-}
-.cid-rrQaNeE89A figcaption div {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-}
-@media (max-width: 768px) {
-  .cid-rrQaNeE89A .image-block {
-    width: 100% !important;
-  }
-}
-.cid-rrQaNeE89A .mbr-figure-caption div {
-  color: #232323;
 }
