--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1656,6 +1656,11 @@ body {
 .cid-rrtUghjvwb .collapsed .navbar-collapse.show .navbar-buttons:last-child {
   margin-bottom: 1rem;
 }
+@media (min-width: 992px) {
+  .cid-rrtUghjvwb .collapsed:not(.navbar-short) .navbar-collapse {
+    max-height: calc(98.5vh - 4.9rem);
+  }
+}
 .cid-rrtUghjvwb .collapsed button.navbar-toggler {
   display: block;
 }
