--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,3 +1,4 @@
+@import url(https://fonts.googleapis.com/css?family=Pacifico:400);
 @import url(https://fonts.googleapis.com/css?family=Rubik:300,300i,400,400i,500,500i,700,700i,900,900i);
 
 
@@ -20,18 +21,18 @@ body {
   line-height: 1.6;
 }
 .display-1 {
-  font-family: 'Rubik', sans-serif;
-  font-size: 4.25rem;
+  font-family: 'Pacifico', handwriting;
+  font-size: 5.4rem;
 }
 .display-1 > .mbr-iconfont {
-  font-size: 6.8rem;
+  font-size: 8.64rem;
 }
 .display-2 {
   font-family: 'Rubik', sans-serif;
-  font-size: 2.2rem;
+  font-size: 1.6rem;
 }
 .display-2 > .mbr-iconfont {
-  font-size: 3.52rem;
+  font-size: 2.56rem;
 }
 .display-4 {
   font-family: 'Rubik', sans-serif;
@@ -42,10 +43,10 @@ body {
 }
 .display-5 {
   font-family: 'Rubik', sans-serif;
-  font-size: 1.5rem;
+  font-size: 2.5rem;
 }
 .display-5 > .mbr-iconfont {
-  font-size: 2.4rem;
+  font-size: 4rem;
 }
 .display-7 {
   font-family: 'Rubik', sans-serif;
@@ -61,14 +62,14 @@ body {
 /* 0.65 - min scale variable, may vary */
 @media (max-width: 768px) {
   .display-1 {
-    font-size: 3.4rem;
-    font-size: calc( 2.1374999999999997rem + (4.25 - 2.1374999999999997) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.4 * (2.1374999999999997rem + (4.25 - 2.1374999999999997) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 4.32rem;
+    font-size: calc( 2.54rem + (5.4 - 2.54) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.4 * (2.54rem + (5.4 - 2.54) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-2 {
-    font-size: 1.76rem;
-    font-size: calc( 1.42rem + (2.2 - 1.42) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.4 * (1.42rem + (2.2 - 1.42) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 1.28rem;
+    font-size: calc( 1.21rem + (1.6 - 1.21) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.4 * (1.21rem + (1.6 - 1.21) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-4 {
     font-size: 1.08rem;
@@ -76,9 +77,9 @@ body {
     line-height: calc( 1.4 * (1.1225rem + (1.35 - 1.1225) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-5 {
-    font-size: 1.2rem;
-    font-size: calc( 1.175rem + (1.5 - 1.175) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.4 * (1.175rem + (1.5 - 1.175) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 2rem;
+    font-size: calc( 1.525rem + (2.5 - 1.525) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.4 * (1.525rem + (2.5 - 1.525) * ((100vw - 20rem) / (48 - 20))));
   }
 }
 /* Buttons */
@@ -1813,11 +1814,11 @@ body {
   color: #767676 !important;
 }
 .cid-rrtSr8dKat {
-  background-image: url("../../../assets/images/notebook-2386034-2000x1334.jpg");
+  background-image: url("../../../assets/images/1233-1-1688x1125.jpg");
 }
 .cid-rrtSr8dKat H1 {
-  text-align: left;
-  color: #ffffff;
+  text-align: center;
+  color: #000000;
 }
 .cid-rrtSr8dKat .mbr-text,
 .cid-rrtSr8dKat .mbr-section-btn {
@@ -1825,21 +1826,24 @@ body {
   color: #000000;
 }
 .cid-rrtSr8dKat H3 {
-  text-align: left;
-  color: #ffffff;
+  text-align: center;
+  color: #000000;
+}
+.cid-rrtSr8dKat P {
+  text-align: center;
 }
 .cid-rrvNn7r5fB {
   padding-top: 60px;
   padding-bottom: 60px;
-  background-color: #f4f4f4;
+  background-color: #f9f9f9;
 }
 .cid-rrvNn7r5fB H3 {
   color: #232323;
   text-align: center;
 }
 .cid-rrTDenLsUA {
-  padding-top: 90px;
-  padding-bottom: 90px;
+  padding-top: 60px;
+  padding-bottom: 75px;
   background-image: url("../../../assets/images/mbr-15-1920x1280.jpg");
 }
 .cid-rrTDenLsUA H1 {
@@ -1858,8 +1862,8 @@ body {
   background-color: #ffffff;
 }
 .cid-rrFpBTN7E0 .line {
-  background-color: #c1c1c1;
-  color: #c1c1c1;
+  background-color: #ebdedc;
+  color: #ebdedc;
   align: center;
   height: 2px;
   margin: 0 auto;
@@ -1875,52 +1879,53 @@ body {
     width: 100% !important;
   }
 }
-.cid-rrFpqjHwE2 {
-  padding-top: 30px;
+.cid-rsfrYKH7oH {
+  padding-top: 0px;
   padding-bottom: 0px;
-  background-image: url("../../../assets/images/mbr-9-1920x1280.jpg");
+  background-color: #ffffff;
 }
-.cid-rrFpqjHwE2 h4 {
-  text-align: left;
+.cid-rsfrYKH7oH h4 {
   font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
 }
-.cid-rrFpqjHwE2 p {
+.cid-rsfrYKH7oH p {
   color: #767676;
   text-align: left;
 }
-.cid-rrFpqjHwE2 .card-img {
-  text-align: left;
+.cid-rsfrYKH7oH .card-box {
+  padding-top: 2rem;
 }
-.cid-rrFpqjHwE2 .card-img span {
-  font-size: 72px;
-  color: #707070;
+.cid-rsfrYKH7oH .card-wrapper {
+  height: 100%;
 }
-.cid-rrFpqjHwE2 .card-title,
-.cid-rrFpqjHwE2 .card-img {
+.cid-rsfrYKH7oH .card-title {
   text-align: center;
 }
-.cid-rrFps9PC11 {
+.cid-rsjTnwLm0I {
   padding-top: 0px;
-  padding-bottom: 30px;
-  background-image: url("../../../assets/images/mbr-9-1920x1280.jpg");
+  padding-bottom: 0px;
+  background-color: #ffffff;
 }
-.cid-rrFps9PC11 h4 {
-  text-align: left;
+.cid-rsjTnwLm0I h4 {
   font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
 }
-.cid-rrFps9PC11 p {
+.cid-rsjTnwLm0I p {
   color: #767676;
   text-align: left;
 }
-.cid-rrFps9PC11 .card-img {
-  text-align: left;
+.cid-rsjTnwLm0I .card-box {
+  padding-top: 2rem;
 }
-.cid-rrFps9PC11 .card-img span {
-  font-size: 72px;
-  color: #707070;
+.cid-rsjTnwLm0I .card-wrapper {
+  height: 100%;
 }
-.cid-rrFps9PC11 .card-title,
-.cid-rrFps9PC11 .card-img {
+.cid-rsjTnwLm0I .card-title {
+  text-align: center;
+}
+.cid-rsjTnwLm0I P {
   text-align: center;
 }
 .cid-rrTHHIOD0g {
@@ -1929,8 +1934,8 @@ body {
   background-color: #ffffff;
 }
 .cid-rrTHHIOD0g .line {
-  background-color: #c1c1c1;
-  color: #c1c1c1;
+  background-color: #ebdedc;
+  color: #ebdedc;
   align: center;
   height: 2px;
   margin: 0 auto;
@@ -2014,8 +2019,8 @@ body {
   background-color: #ffffff;
 }
 .cid-rrTLCGhIVu .line {
-  background-color: #c1c1c1;
-  color: #c1c1c1;
+  background-color: #ebdedc;
+  color: #ebdedc;
   align: center;
   height: 2px;
   margin: 0 auto;
@@ -2117,8 +2122,8 @@ body {
   background-color: #ffffff;
 }
 .cid-rrTVh6SFHx .line {
-  background-color: #c1c1c1;
-  color: #c1c1c1;
+  background-color: #ebdedc;
+  color: #ebdedc;
   align: center;
   height: 2px;
   margin: 0 auto;
@@ -2134,68 +2139,31 @@ body {
     width: 100% !important;
   }
 }
-.cid-rrTSWlMJTf {
-  padding-top: 30px;
-  padding-bottom: 60px;
+.cid-rsjVzpI9zZ {
+  padding-top: 0px;
+  padding-bottom: 105px;
   background-color: #ffffff;
 }
-.cid-rrTSWlMJTf .mbr-section-subtitle {
+.cid-rsjVzpI9zZ h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+}
+.cid-rsjVzpI9zZ p {
   color: #767676;
-  font-weight: 300;
+  text-align: left;
 }
-.cid-rrTSWlMJTf .mbr-content-text {
-  color: #767676;
+.cid-rsjVzpI9zZ .card-box {
+  padding-top: 2rem;
 }
-.cid-rrTSWlMJTf .card {
-  word-wrap: break-word;
-  flex-shrink: 0;
-  -webkit-flex-shrink: 0;
+.cid-rsjVzpI9zZ .card-wrapper {
+  height: 100%;
 }
-.cid-rrTSWlMJTf .mbr-iconfont {
-  font-size: 80px;
-  color: #149dcc;
+.cid-rsjVzpI9zZ .card-title {
+  text-align: center;
 }
-.cid-rrTSWlMJTf .cards-container {
-  display: flex;
-  -webkit-flex-direction: row;
-  flex-direction: row;
-  -webkit-flex-wrap: wrap;
-  flex-wrap: wrap;
-  -webkit-justify-content: center;
-  justify-content: center;
-  word-break: break-word;
-}
-.cid-rrTSWlMJTf .media-block {
-  flex-shrink: 0;
-  -webkit-flex-shrink: 0;
-}
-@media (min-width: 992px) {
-  .cid-rrTSWlMJTf .media-block {
-    padding-left: 2rem;
-  }
-}
-.cid-rrTSWlMJTf .cards-block {
-  flex-basis: 100%;
-  -webkit-flex-basis: 100%;
-}
-.cid-rrTSWlMJTf .card-img {
-  display: flex;
-  -webkit-align-items: center;
-  align-items: center;
-  -webkit-flex-wrap: wrap;
-  flex-wrap: wrap;
-}
-@media (max-width: 991px) {
-  .cid-rrTSWlMJTf .media-block {
-    flex-basis: 100%;
-    -webkit-flex-basis: 100%;
-    padding-left: 0;
-    padding-bottom: 2rem;
-  }
-}
-.cid-rrTSWlMJTf .media-container-row {
-  -webkit-flex-direction: row-reverse;
-  flex-direction: row-reverse;
+.cid-rsjVzpI9zZ P {
+  text-align: center;
 }
 .cid-rrGAIVNdxh {
   padding-top: 0px;
@@ -2260,8 +2228,31 @@ body {
 .cid-rrTQntLvUa H2 {
   color: #232323;
 }
+.cid-rsfv810hel {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-rsfv810hel .line {
+  background-color: #ebdedc;
+  color: #ebdedc;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
+}
+.cid-rsfv810hel .section-text {
+  padding: 2rem 0;
+}
+.cid-rsfv810hel .inner-container {
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-rsfv810hel .inner-container {
+    width: 100% !important;
+  }
+}
 .cid-rrWfpLnnRt {
-  padding-top: 45px;
+  padding-top: 0px;
   padding-bottom: 90px;
   background-color: #ffffff;
 }
@@ -2274,7 +2265,7 @@ body {
   flex-wrap: wrap;
 }
 .cid-rrWfpLnnRt .mbr-text {
-  color: #767676;
+  color: #000000;
 }
 .cid-rrWfpLnnRt .mbr-author-desc {
   display: block;
@@ -2316,6 +2307,56 @@ body {
   .cid-rrWfpLnnRt .testimonial-photo {
     width: 100% !important;
     height: auto !important;
+  }
+}
+.cid-rsjMLMkUis {
+  padding-top: 0px;
+  padding-bottom: 90px;
+  background: #ffffff;
+}
+.cid-rsjMLMkUis .images-container.container-fluid {
+  padding: 0;
+}
+.cid-rsjMLMkUis .media-container-row {
+  margin: 0 auto;
+  align-items: stretch;
+  -webkit-align-items: stretch;
+}
+.cid-rsjMLMkUis .media-container-row .img-item {
+  display: -webkit-flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  width: 100%;
+  z-index: 1;
+  -webkit-flex-direction: column;
+  -webkit-justify-content: center;
+}
+.cid-rsjMLMkUis .media-container-row .img-item img {
+  width: 100%;
+  min-height: 1px;
+}
+.cid-rsjMLMkUis .media-container-row .img-item .img-caption {
+  background: #ffffff;
+  z-index: 2;
+  padding: 1rem 1rem;
+  word-break: break-word;
+}
+.cid-rsjMLMkUis .media-container-row .img-item .img-caption p {
+  margin-bottom: 0;
+}
+.cid-rsjMLMkUis .media-container-row .img-item.item1 {
+  padding: 0 2rem 0 0;
+}
+@media (max-width: 992px) {
+  .cid-rsjMLMkUis .img-item {
+    width: 100% !important;
+  }
+  .cid-rsjMLMkUis .img-item.item1 {
+    width: 100%;
+    flex-basis: initial !important;
+    padding: 0 0 2rem 0 !important;
+    -webkit-flex-basis: initial !important;
   }
 }
 .cid-rrGFXH8g8m {
