--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Marck+Script:400);
+@import url(https://fonts.googleapis.com/css?family=GFS+Didot:400);
 @import url(https://fonts.googleapis.com/css?family=Rubik:300,300i,400,400i,500,500i,700,700i,900,900i);
 
 
@@ -21,11 +21,11 @@ body {
   line-height: 1.6;
 }
 .display-1 {
-  font-family: 'Marck Script', handwriting;
-  font-size: 3.4rem;
+  font-family: 'GFS Didot', serif;
+  font-size: 3rem;
 }
 .display-1 > .mbr-iconfont {
-  font-size: 5.44rem;
+  font-size: 4.8rem;
 }
 .display-2 {
   font-family: 'Rubik', sans-serif;
@@ -62,9 +62,9 @@ body {
 /* 0.65 - min scale variable, may vary */
 @media (max-width: 768px) {
   .display-1 {
-    font-size: 2.72rem;
-    font-size: calc( 1.8399999999999999rem + (3.4 - 1.8399999999999999) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.4 * (1.8399999999999999rem + (3.4 - 1.8399999999999999) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 2.4rem;
+    font-size: calc( 1.7rem + (3 - 1.7) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.4 * (1.7rem + (3 - 1.7) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-2 {
     font-size: 1.28rem;
@@ -2271,6 +2271,48 @@ body {
     padding: 0 0 2rem 0 !important;
     -webkit-flex-basis: initial !important;
   }
+}
+.cid-rtaBMqyPUE {
+  padding-top: 90px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-rtaBMqyPUE .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-rtaBMqyPUE .media-row {
+  display: -webkit-flex;
+  justify-content: center;
+  -webkit-justify-content: center;
+}
+.cid-rtaBMqyPUE .team-item {
+  transition: all .2s;
+  margin-bottom: 2rem;
+}
+.cid-rtaBMqyPUE .team-item .item-image img {
+  width: 100%;
+}
+.cid-rtaBMqyPUE .team-item .item-name p {
+  margin-bottom: 0;
+}
+.cid-rtaBMqyPUE .team-item .item-role p {
+  margin-bottom: 0;
+}
+.cid-rtaBMqyPUE .team-item .item-social {
+  display: -webkit-flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  -webkit-flex-wrap: wrap;
+  -webkit-justify-content: center;
+}
+.cid-rtaBMqyPUE .team-item .item-social .socicon {
+  color: #232323;
+  font-size: 17px;
+}
+.cid-rtaCvcrBLS {
+  padding-top: 0px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
 }
 .cid-rrQhYvM7wF {
   padding-top: 0px;
